--- a/source/_includes/asides/about.html
+++ b/source/_includes/asides/about.html
@@ -1,5 +1,5 @@
 
 <section>
   <h1>About Me</h1>
-  <p>david m. johnson is a life-long learner, developer, traveler, almost paleo, amateur theologian and chicagoan</p>
+  <p>David M. Johnson is a life-long learner, developer, traveler, almost paleo, amateur theologian and chicagoan.</p>
     </section>
